crates/apollo-compiler/test_data/diagnostics/0084_circular_non_nullable_input_objects.txt
Error: `First` input object cannot reference itself
    ╭─[0084_circular_non_nullable_input_objects.graphql:6:1]
    │
  6 │ ╭─▶ input First {
    ┆ ┆   
  9 │ ├─▶ }
    │ │       
    │ ╰─────── cyclical input object definition
    │ 
 22 │       first: First!
    │       ──────┬──────  
    │             ╰──────── refers to itself here
────╯
Error: `Second` input object cannot reference itself
    ╭─[0084_circular_non_nullable_input_objects.graphql:11:1]
    │
  7 │       second: Second!
    │       ───────┬───────  
    │              ╰───────── refers to itself here
    │ 
 11 │ ╭─▶ input Second {
    ┆ ┆   
 14 │ ├─▶ }
    │ │       
    │ ╰─────── cyclical input object definition
────╯
Error: `Third` input object cannot reference itself
    ╭─[0084_circular_non_nullable_input_objects.graphql:16:1]
    │
 12 │       third: Third!
    │       ──────┬──────  
    │             ╰──────── refers to itself here
    │ 
 16 │ ╭─▶ input Third {
    ┆ ┆   
 19 │ ├─▶ }
    │ │       
    │ ╰─────── cyclical input object definition
────╯
Error: `Fourth` input object cannot reference itself
    ╭─[0084_circular_non_nullable_input_objects.graphql:21:1]
    │
 17 │       fourth: Fourth!
    │       ───────┬───────  
    │              ╰───────── refers to itself here
    │ 
 21 │ ╭─▶ input Fourth {
    ┆ ┆   
 23 │ ├─▶ }
    │ │      
    │ ╰────── cyclical input object definition
────╯

